--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adivina el número</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container registro">
-        <form method="post" id="Registrarseform" onsubmit="return adivinarNumRnd(event);">
-            <div class="form-group margin">
-                <label for="numero">Ingrese un número:</label>
-                <input type="number" class="form-control" id="numero" name="numero" placeholder="Introducir número" min="1" max="100" required>
-            </div>
-            <div class="button-container">
-                <button type="submit" class="btn btn-primary">Enviar</button>
-            </div>
-        </form>
-    </div>
+
+    <form class="form-container" method="post" id="Registrarseform" onsubmit="return adivinarNumRnd(event);">
+        <h1>Adivina el Número</h1>
+        <h2 id="subtitulo">Elegí un numero entre el 1 y el 100</h2>
+        <div class="input-group">
+            <label for="inputNumero" class="visually-hidden">Número</label>
+            <input type="number" class="form-control" id="numero" placeholder="Ingrese un número" required>
+        </div>
+        <div class="button-group">
+            <button type="button" class="btn btn-dark">Adivinar</button>       
+         </div>
+    </form>
 
     <script src="java.js"></script>
 </body>
